public/stylesheets/index.css
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;}
article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section { display: block;}
body { 
    line-height: 1;
}
ol,ul { 
    list-style: none;
}
blockquote,q { 
    quotes: none;
}
blockquote:before,blockquote:after,q:before,q:after { 
    content: ''; content: none;
}
table { 
    border-collapse: collapse; border-spacing: 0;
}

h2 {
    font-size: 0;
    margin-block-start: 0;
    margin-block-end: 0;
}

h3 {
    margin-block-start: 0;
    margin-block-end: 0;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

h5 {
    font-size: 0;
    margin-block-start: 0;
    margin-block-end: 0;
}

p {
    margin-block-start: 0em;
    margin-block-end: 0em;
    /* margin-top: 1em; */
}

/* #################  CSS RESET ABOVE  ######################*/

body {
    /* background-image: linear-gradient(315deg, #7fcec5 0%, #14557b 79%); 1st iteration*/
    /* background-image: linear-gradient(315deg,#14557b 0%,  #65a19a 70%); 2nd iteration*/
    /* background-image: linear-gradient(315deg,#14557bd2 0%,  #65a19a 90%); */
    background: #7772A4;
    background: -moz-linear-gradient(top, #7772A4 0%, #22B0D0 82%, #7772A4 100%);
    background: -webkit-linear-gradient(top, #7772A4 0%, #22B0D0 82%, #7772A4 100%);
    background: linear-gradient(to bottom, #7772A4 0%, #22B0D0 82%, #7772A4 100%);
    font-size: 18px;
    margin: 0;
    padding: 0 15px;
}

a {
    text-decoration: none;
    font-family: 'Rubik', sans-serif;
}

.main {
    margin: 3em 0 0 0;
    display: flex;
    align-content: center;
    flex-direction: column;
    color: rgb(37, 37, 37);
}

/****** NAVBAR ******/
.nav-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding-top: 2.2em;
    
}

.nav-item {   
    padding-left: 1em;
    padding-right: 1em;
    list-style-type: none;
    font-size: 1em;
    font-weight: 300;
    letter-spacing: 1.45px;
    color: whitesmoke;
}

.nav-link {
    color: whitesmoke;
    text-decoration: dashed #65a19a;    
    transition: text-decoration 500ms steps(7, end) 75ms;
}

.nav-link:hover {
    text-decoration: solid underline whitesmoke 3px;
}


/****** HEADER SECTION ******/
h1 {
    font-family: 'Castoro', serif;
    font-size: 4.25rem;
    line-height: 0.95;
    padding-bottom: 0.5em;
    font-weight: 600;
}

.header-container {
    display: flex;
    justify-content: center;
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    word-spacing: 2px;
}

.header-item:first-child {
    padding-top: 3em;
}

.header-item {
    width: 31em;
    height: auto;
}

/* .header-item:last-child {
    align-self: center;
} */

.header-item > p {
    font-size: 1em;
    line-height: 1.6;
    margin-bottom: 1.6em;
    /* letter-spacing: 1.5px;
    word-spacing: 1.5px; */
}
    /* p tag eith link under image; cta means 'call to action' */
#games-gallery-cta { 
    font-size: 0.75em;
    text-align: center;
    margin-top: 3em;
    display: inline;   
    /* transition-property: transform;
    transition-duration: 300ms; */
}

#cta-link-cont {
    display: inline;
}

#cta-link-cont:hover {
    -moz-transform: translate(0px, 10px);
    -webkit-transform: translate(0px, 10px);
    -o-transform: translate(0px, 10px);
    -ms-transform: translate(0px, 10px);
    transform: translate(0px, 10px);
}

/* #games-gallery-cta > span:hover {
    -moz-transform: translate(6px, 0px);
    -webkit-transform: translate(6px, 0px);
    -o-transform: translate(6px, 0px);
    -ms-transform: translate(6px, 0px);
    transform: translate(10px, 0px);
} */

#cta-link-cont a {
    color: whitesmoke;
    padding-left: 4px;
    font-weight: 400;
    font-family: 'Rubik', sans-serif;
    font-size: 0.8em;
}

#cta-link-cont  a::after {
    content: "";
    background: url("../images/arrow-right.png") no-repeat;
    position: absolute;
    height: 24px;
    width: 24px;
    margin-left: 5px;
    margin-top: 3px;
}

    /* image */
#building-websites {
    max-width: 100%;
    max-height: 100%;
  
}
    /* link to projects section */
    /*
    ### space between a tag and the ::after arrow isnt affected by the :hover effect
    ### so transform reverts when hovering between the two. Fix this. Maybe by using
    ### using div or span to group p tag and add hover to new div instead.
    */
#see-projects {
    margin-top: 10px;
    width: 112px;
    /* transition: transform 500ms easeOutSine 1s; */
    transition-property: transform;
    transition-duration: 300ms;
}

#see-projects > a {
    color: whitesmoke;
    letter-spacing: 1.3px;
    font-size: 1rem;
    font-weight: 300;
}

#see-projects > a::after {
    content: "";
    background: url(../images/arrow-down-o.png) no-repeat;
    background-size: 22px 22px;
    position: absolute;
    height: 22px;
    width: 22px;
    margin: 3px 0 0 10px;
}

#see-projects:hover {
    -moz-transform: translate(0px, 10px);
    -webkit-transform: translate(0px, 10px);
    -o-transform: translate(0px, 10px);
    -ms-transform: translate(0px, 10px);
    transform: translate(0px, 10px);
    
}

/****** PROJECTS SECTION ******/
#projects-section {
    display: flex;
    justify-content: center;
    margin-bottom: 7em;
}

h2 {
    font-family: 'Castoro', serif;
    font-size: 3.2rem;
    padding: 3em 0 0.75em 0;
    margin: 0;
    font-weight: 600;
}

#projects-container {
    display: flex;
    flex-flow: column wrap;
    flex-basis: 62em;        
}

.project-item {
    max-width: 62em;
    height: auto;
    border-top: 2px dotted rgb(37, 37, 37);
    padding: 2.25em 0 2.25em 0;
}

.project-item:last-child {
    border-bottom: 2px dotted rgb(37, 37, 37);
}
    /* info container */
/*** maybe add flex shrink so the image shrinks at a slower rate than the text */    
.project-info {
    display: flex;
    justify-content: space-between;
}
    /* project title */
.project-info > h3 {
    font-family: 'Roboto Mono', monospace;
    font-weight: 400;
    font-size: 2.6rem;
    color: whitesmoke;

}

#expand-arrow {
    margin: 10px 5px 0 0;
    height: 30px;
    width: 30px;
}
    /* hidden info section container */
.hidden-proj-info {
    display: flex;
    margin: 2rem 1rem 1rem 1rem;
    /* flex-wrap: wrap; */
}

.hidden-proj-item {
    max-width: 50%;
}

.hidden-proj-info > .hidden-proj-item:last-child {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.tech-specs {
    display: flex;
    justify-content: space-evenly;
}
    /* tech-specs is the container for the uls */
.tech-specs ul {
    display: inline-block;
    font-family: 'Roboto Mono', monospace;
    font-weight: 400;
    line-height: 1.5;
}
    /* titles of unordered lists */
.tech-specs ul li:first-child {
    font-weight: 500;
    
}
    /* project description */
.hidden-proj-item > p {
    font-family: 'Roboto Mono', monospace;
    font-weight: 400;
    word-spacing: 1px;
    line-height: 2.5;
    font-size: 0.95em;
    padding: 0 2em 0 1.7em;
}
    /* container for links to proj demo, live, ... */
.proj-links {
    list-style: none;
    text-align: center;
    display: flex;
    justify-content: space-around;
    padding-top: 0.75em;
}
    
.link-item {
    color: whitesmoke;
    letter-spacing: 1.5px;
    font-family: 'Roboto Mono', monospace;
    font-weight: 300;
}
    /* img gif of project demo */
.demo-gif {
    width: 100%;
    height: 25%;
}

/****** DIVIDER ******/
.divider {
    width: 62em;
    margin: auto;
}
    /* the criss-cross design */
.divider img {
    width: 62em;
    display: block;
    margin: auto;
}


/****** FOOTER ******/
.footer {
    display: flex;
    justify-content: center;
    padding: 6.75em 0 3rem 0;
}
.footer-container {
    display: flex;
    justify-content: space-between;
    width: 62em;
    flex-wrap: wrap;
    text-align: left;
}

.footer-item {
    width: 20rem;
    height: 10rem;
    font-family: 'Raleway', sans-serif;
    font-size: 0.9em;
    color: whitesmoke;
    letter-spacing: 0.75px;
}

.footer-item > p {
    padding-top: 10px;
}

.footer-item > h5 {
    font-family: 'Castoro', serif;
    font-size: 1.25em;
    color: rgb(44, 44, 44);
}
    /* bible quote footer item */
.footer-item:first-child {
    font-size: 1em;
    font-weight: 500;
    word-spacing: 2.25px;
    line-height: 1.5;
    color: rgb(44, 43, 43);
}

.footer-item:first-child > p {
    margin-top: 2px;
    padding-top: 0;
}

/****** EFFECTS ******/
/* .translate-rt {
    -moz-transform: translate(6px, 0px);
    -webkit-transform: translate(6px, 0px);
    -o-transform: translate(6px, 0px);
    -ms-transform: translate(6px, 0px);
    transform: translate(6px, 0px);
} */

/* .thick:hover {
    text-decoration: solid underline whitesmoke 3px;
} */


/****** ONLY MEDIA QUERIES ******/
@media (max-width: 775px) {
    .header-container {
        flex-wrap: wrap;        
    }
        /* image */
    #building-websites {
        max-width: 90%;
        max-height: 90%;    
    } 
}

@media (max-width: 810px) {
    .project-info > h3 {
        font-size: 1.7rem;
    }

    .header-container {
        flex-wrap: wrap;        
    }
        /* image */
    #building-websites {
        max-width: 90%;
        max-height: 90%;    
    } 

    .hidden-proj-info > p {
        font-size: 0.8em;
    }
}

@media (max-width: 829px) {
    .hidden-proj-info {
        flex-wrap: wrap;
        justify-content: center;
    }

    .hidden-proj-item {
        max-width: 80%;
        height: auto;
    }

    .hidden-proj-item > p {
        padding: 1.1em 0.5em;
    }

    .tech-specs {
        justify-content: space-between;
    }
}

@media (max-width: 1006px) {
    .footer-container {
        justify-content: space-between;
    }
}

@media (max-width: 1160px) {
    .header-item {
        padding-left: 10px;
        padding-right: 10px;
    }

    .divider, .divider img {
        max-width: 100%;
    }
}

